# barnes-hut

./: Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
src/: application.rs  constants.rs  created.rs  drawable.rs  drawing.rs  entity.rs  geometry.rs  lib.rs  macros.rs  main.rs  particle.rs  quad_tree.rs  view_state.rs  wasm.rs
src/geometry/: bounding_box.rs  mod.rs
src/physics/: barnes_hut.rs  mod.rs  particle.rs  point_mass.rs  space.rs  space_2d.rs  universe.rs
src/quad_tree/: iterator.rs  mod.rs
src/simulation/: mod.rs  particle.rs  stats.rs  universe.rs
