[package]
name = "barnes-hut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
nannou = "0.18.1"
rand_distr = "0.4.3"

[dev-dependencies]
static_assertions = "1.1.0"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
