[package]
name = "barnes-hut"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-std = { version = "1.12.0", features = ["unstable"] }
derivative = "2.2.0"
env_logger = "0.10.0"
getrandom = { version = "0.2", features = ["js"] }
instant = "0.1.12"
itertools = "0.10.5"
log = "0.4.17"
nannou = { version = "0.18.1", git = "https://github.com/nannou-org/nannou.git", branch = "master" }
nannou_egui = { version = "0.5.0", git = "https://github.com/nannou-org/nannou.git", branch = "master" }

rand_distr = "0.4.3"
rayon = { version = "1.7.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
console_error_panic_hook = "0.1"
console_log = "1.0.0"
fern = "0.6.2"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
nannou = { version = "0.18.1", git = "https://github.com/nannou-org/nannou.git", branch = "master", features = ["wasm-experimental"] }

[dev-dependencies]
static_assertions = "1.1.0"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["rayon"]
